Overflow correctly

--- a/app/javascript/skins/glitch/sleeping/_base.scss
+++ b/app/javascript/skins/glitch/sleeping/_base.scss
@@ -65,7 +65,8 @@ $ui-base-dark-color: #000 !default;
   width: auto;
   max-width: calc(100% - 110px);
   line-height: 1.2;
-  overflow: ellipsize;
+  overflow: hidden;
+  text-overflow: ellipsis
 }
 
 .account--follows-info,
